--- a/css/media-query.css
+++ b/css/media-query.css
@@ -12,6 +12,7 @@
         float: right;
     }
     /* end navbar style */
+    
 }
 
 @media (min-width: 768px) and (max-width: 991px)
@@ -29,22 +30,163 @@
 }
 
 
-@media (max-width: 767px)
+@media(max-width: 767px)
 {
-    /* start navbar style */
+    
+    /*==================
+    start navbar style 
+    ====================*/
     .navbar-default .navbar-collapse
     {
         border: none;
         background-color: rgba(1,1,1,.5);
     }
-    /* end navbar style */
+    /*==================
+    end navbar style 
+    ====================*/
     
-    /* Start header article style */
-    header h1{
+    /*==================
+    Start header article style 
+    ====================*/
+    
+    header .article h1{
         font-size: 40px;
     }
     header .article p{
         font-size: 15px;
     }
-    /* end header article style */
+    
+    /*================== 
+    end header article style 
+    ====================*/
+    
+    
+    /*================== 
+    Start features style 
+    ====================*/
+    .feature-title
+    {
+        text-align: center;
+        width: 300px;
+        margin: auto;
+    }
+    
+    .features h2{
+        font-size: 22px;
+        top: 50px;
+    }
+    .features .feature-title span
+    {
+        font-size: 150px;
+    }
+    
+    /*================== 
+    end features style 
+    ====================*/
+    
+    /*================== 
+    Start news style 
+    ====================*/
+
+    .news .left,.news .right
+    {
+        padding-top: 30px;
+    }
+    .news .content
+    {
+        text-align: center;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+    
+    /*================== 
+    end news style 
+    ====================*/
+    
+    /*================
+    Start agency style
+    ==================*/
+    .agency .img img
+    {
+        float: left;
+        margin-left: 40px;
+    }
+    /*================
+    end agency style
+    ==================*/
+    
+    
+    /*================
+    Start team style
+    ==================*/
+    .team .team_content>div
+    {
+        margin: auto;
+        margin-bottom: 50px;
+        margin-left: 25%;
+    }
+    /*================
+    End team style
+    ==================*/
+    
+    /*================
+    Start contact style
+    ==================*/
+    .title
+    {
+        max-width: 300px;
+        margin: auto;
+    }
+    .contact h2{
+        width: 100%;
+        text-align: center;
+        font-size: 18px;
+        top: 50px;
+    }
+    .contact .title span
+    {
+        font-size: 150px;
+    }
+    /*================
+    End contact style
+    ==================*/
+    
+    /*================
+    Start footer style
+    ==================*/
+    
+    footer .social li
+    {
+        float: none;
+        display: inline-block;
+    }
+    /*================
+    End footer style
+    ==================*/
+}
+
+@media (max-width: 480px)
+{
+    /*================
+    Start agency style
+    ==================*/
+    .agency .content>div
+    {
+        margin-left: 5px;
+    }
+    /*================
+    End agency style
+    ==================*/
+    
+    /*================
+    Start team style
+    ==================*/
+    .team .team_content>div
+    {
+        
+        margin-left: 10px;
+    }
+    /*================
+    End team style
+    ==================*/
 }
