--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,75 @@
+.preloader{
+    background: linear-gradient( #7f8c8d,#3498db);
+    height: 100%;
+    position: fixed;
+    width: 100%;
+    z-index: 1100;
+    overflow: hidden;
+}
+#preloader_1{
+    padding-top: 100px;
+    display: flex;
+    padding-top: 50%;
+    margin-left: 45%;
+}
+#preloader_1 span{
+    margin-left: 2px;
+    width: 5px;
+    height: 15px;
+    background:#eee;
+    opacity: .8;
+    animation: preloader_1 1.5s  infinite ease-in-out;
+}
+ 
+#preloader_1 span:nth-child(2){
+
+animation-delay: .2s;
+ 
+}
+#preloader_1 span:nth-child(3){
+
+animation-delay: .4s;
+}
+#preloader_1 span:nth-child(4){
+
+animation-delay: .6s;
+}
+#preloader_1 span:nth-child(5){
+
+animation-delay: .8s;
+}
+@keyframes preloader_1 {
+    0% {
+        transform:scaleY(1);
+    }
+    25% {
+        transform:scaleY(2.5);
+    }
+    50% {
+        transform:scaleY(1);
+    }
+    100% {
+        transform:scaleY(1);
+    }
+}
+/*==================
+start page style
+===================*/
 body,ul{
     padding: 0px;
     margin: 0px;
+    overflow-x: hidden;
 }
-
-
-/* Start header style */
+h1,h2,h3,h4,h5
+{
+    font-family: 'Open Sans';
+}
 
 header{
     background: url(../images/back-header.jpg) no-repeat;
     background-size: cover;
     padding: 30px 0px 50px 0px;
     overflow: hidden;
-    height: 100vh;
     min-height: 500px;
     
 }
@@ -22,8 +80,8 @@ header{
 {
     background: none;
     border: none;
+    margin-top: 5px;
 }
-
 .navbar-default .navbar-collapse .nav_links
 {
     width: 85%;
@@ -52,9 +110,9 @@ header{
 .navbar-default .navbar-collapse  li a
 {
     font-size: 17px;
+    text-decoration: none;
     color: #777;
 }
-
 .navbar-default .navbar-collapse li:hover a
 {
     color: #337ab7;
@@ -90,11 +148,10 @@ header .article
     margin-top: 120px;
 }
 
-header h1
+header .article h1
 {
     color: #d7d7d7;
     font-size: 110px;
-    font-family: OpenSans-Bold;
     font-weight: bold;
 }
 
@@ -108,6 +165,7 @@ header .article p
 header .scroll
 {
     margin-top: 120px;
+    margin-bottom: 200px;
 }
 header .scroll p
 {
@@ -117,9 +175,10 @@ header .scroll p
 
 header .scroll i
 {
+    position: absolute;
+    margin-left: -15px;
     font-size: 3em;
     color: #d7d7d7;
-    padding: 10ppx;
 }
 header .scroll i:hover
 {
@@ -182,32 +241,518 @@ header .scroll i:hover
 }
 /* End header article style*/
 
-/* Start features style */
+/*====================
+Start features style
+======================*/
 
 .features{
     min-height:300px;
     background: #11749e;
-    padding-top: 50px;
+    padding-top: 40px;
+    padding-bottom: 50px;
     position: relative;
 }
 
-.features h1{
+.features h2{
     top: 82px;
-    margin-left: 40px;
+    left: 0;
     font-size: 30px;
     font-weight: bold;
     color: #fff;
     position: absolute;
+    width: 100%;
+    text-align: center;
 }
 
 .features .feature-title span
 {
-    
     font-size: 175px;
-    padding: 0px 145px 0px 145px;
+    width: 100%;
+    text-align: center;
     color: #fff;
     opacity: .2;
 }
 
+.features_content div
+{
+    margin-bottom: 50px;
+}
 
-/* End features style */
+.features .icon
+{
+    padding: 30px;
+    background: #338aaa;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    margin: auto;
+}
+
+.features i
+{
+    color: #fff;
+    transition: all 1s ease;
+}
+.features_content div:hover i
+{
+    transform: rotate(360deg);
+}
+.features h3
+{
+    color: #fff;
+    font-weight: bold;
+    
+}
+
+.features p
+{
+    color: #ddd;
+    font-family: cursive;
+}
+
+
+/*================
+End features style
+==================*/
+
+/*================
+End news style
+==================*/
+
+.news p
+{
+    color: #aaa;
+    font-family: cursive;
+}
+
+.news .content
+{
+    max-width: 500px;
+    margin: auto;
+}
+
+.news .left,.news .right
+{
+    padding-top: 100px;
+    min-height: 400px;
+    max-height: 500px;
+}
+
+.news .left{
+    background: #222;
+}
+.news .left .content h3{
+    color: #fff;
+    font-weight: bold;
+    font-size: 30px;
+}
+.news .right .content h3{
+    color: #000;
+    font-weight: bold;
+    font-size: 30px;
+}
+
+.news .img
+{
+    padding: 0px;
+    margin: 0px;
+    overflow: hidden;
+}
+.news img{
+    height: 400px;
+    width: 100%;
+}
+
+/*================
+End news style
+==================*/
+
+/*================
+Start blog style
+==================*/
+
+.blog{
+    min-height:300px;
+    position: relative;
+}
+    
+.blog h2{
+    top: 82px;
+    left: 0;
+    font-size: 30px;
+    font-weight: bold;
+    color: #000;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+}
+.blog .blog-title span
+{
+    font-size: 175px;
+    width: 100%;
+    text-align: center;
+    color: #777;
+    opacity: .2;
+}
+.blog .blog-title p
+{
+    color: #aaa;
+    font-size: 25px;
+    font-family: cursive;
+    margin-bottom: 50px;
+}
+
+.blog .blog_content div
+{
+    margin-bottom: 40px;
+}
+.blog .blog_content .img
+{
+    margin: auto;
+    height: 250px;
+    overflow: hidden;
+}
+.blog .blog_content .img img
+{
+    transition: all 1s ease;
+}
+.blog .blog_content div:first-Child .img img
+{
+    transform: translate(-50px,-50px);
+}
+.blog .blog_content div:nth-child(3) .img img
+{
+    transform: translate(-50px,-100px);
+}
+
+.blog .blog_content div:first-Child .img img:hover
+{
+    transform: translate(-180px,-30px);
+}
+.blog .blog_content div:nth-child(2) .img img:hover
+{
+    transform: translateX(-100px);
+}
+.blog .blog_content div:nth-child(3) .img img:hover
+{
+    transform: translate(-250px,-100px);
+}
+.blog .blog_content div:last-Child .img img:hover
+{
+    transform: translateX(-100px);
+}
+
+.blog .blog_content h4
+{
+    color: #11749e;
+    font-size: 18px;
+    font-weight: bold;
+}
+.blog .blog_content p
+{
+    color: #aaa;
+    font-family: cursive;
+}
+
+/*================
+End blog style
+==================*/
+
+/*================
+Start action style
+==================*/
+
+.action{
+    background: #11749e;
+    padding-top: 50px;
+    padding-bottom: 20px;
+}
+
+.action .content
+{
+    margin-bottom: 30px;
+}
+.action .content i
+{
+    float: left;
+    padding-right: 30px;
+    color: #fff;
+}
+
+.action .content p
+{
+    font-family: cursive;
+    color: #fff;
+}
+
+/*================
+End action style
+==================*/
+
+/*================
+Start agency style
+==================*/
+.agency
+{
+    background: url(../images/back-feature.jpg) no-repeat;
+    background-size: cover;
+    padding-top: 40px;
+    padding-bottom: 50px;
+}
+
+.agency .img img{
+    width: 200px;
+    margin-bottom: 20px;
+}
+
+.agency .content
+{
+    margin-top: 100px;
+}
+.agency .content h4
+{
+    color: #fff;
+    font-weight: bold;
+    font-size: 30px;
+}
+
+.agency .content>p,
+.agency .content div>p
+{
+    color: #fff;
+    font-family: cursive;
+}
+
+.agency .content div
+{
+    background: #11749e;
+    padding-left: 15px;
+    margin-left: 15px;
+    margin-top:  20px;
+}
+.one
+{
+    width: 200px;
+}
+.two
+{
+    width: 230px;
+}
+.three
+{
+    width: 250px;
+}
+
+/*================
+End agency style
+==================*/
+
+/*================
+Start team style
+==================*/
+
+.team{
+    min-height:300px;
+    position: relative;
+}
+    
+.team h2{
+    top: 82px;
+    left: 0;
+    font-size: 30px;
+    font-weight: bold;
+    color: #000;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+}
+.team .team-title span
+{
+    font-size: 175px;
+    width: 100%;
+    text-align: center;
+    color: #777;
+    opacity: .2;
+}
+.team .team-title>p
+{
+    color: #aaa;
+    font-size: 28px;
+    font-family: 'Open Sans';
+    margin-bottom: 50px;
+    font-weight: bold;
+    letter-spacing: 1px;
+}
+
+.team .team_content>div
+{
+    margin-bottom: 80px;
+    position: relative;
+}
+.team .team_content .img
+{
+    height: 280px;
+    width: 250px;
+    overflow: hidden;
+}
+.team .team_content .img img
+{
+    width: 100%;
+    height: 100%;
+    transition: all 1s ease;
+}
+.team .team_content div:hover .img img
+{
+    transform: scale(1.5,1.5);
+}
+.white
+{
+    position: absolute;
+    background-color: #fff;
+    width: 200px;
+    margin-left: 20px;
+    margin-right: 30px;
+    margin-top: -30px;
+    text-align: center;
+}
+.team .team_content h4
+{
+    color: #11749e;
+    font-size: 18px;
+    font-weight: bold;
+    font-family: Arial;
+}
+.white>p
+{
+    color: #333;
+    
+    font-weight: bold;
+}
+
+/*================
+End team style
+==================*/
+
+/*================
+Start contact style
+==================*/
+
+.contact{
+    min-height:300px;
+    position: relative;
+    background: url(../images/back-contact.jpg) no-repeat;
+    background-size: cover;
+    padding-bottom: 50px;
+}
+.title{
+    max-width: 500px;
+} 
+.contact h2{
+    top: 82px;
+    left: 0;
+    font-size: 30px;
+    font-weight: bold;
+    color: #fff;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+}
+.contact .title span
+{
+    font-size: 175px;
+    width: 100%;
+    text-align: center;
+    color: #aaa;
+    opacity: .5;
+}
+
+
+.contact .form input
+{
+    color: #aaa;
+    width: 100%;
+    background: rgba(1,1,1,.1);
+    padding: 5px 20px;
+    border: 1px solid #aaa;
+    margin-bottom: 20px;
+}
+.contact .form textarea
+{
+    color: #aaa;
+    width: 100%;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    background: rgba(1,1,1,.1);
+    padding: 10px 20px;
+    height: 100px;
+    border: 1px solid #aaa;
+}
+
+.contact .form button
+{
+    background-color: #11749e;
+    width: 200px;
+    border: none;
+    padding: 5px 10px;
+    color: #fff;
+    overflow: hidden;
+    position: relative;
+    z-index: 9999
+}
+/*================
+End contact style
+==================*/
+#map 
+{
+    height: 200px;
+}
+/*================
+Start footer style
+==================*/
+footer
+{
+    padding-top: 10px;
+    padding-bottom: 20px;
+    background: #222;
+}
+footer .social li
+{
+    float: left;
+    padding: 10px 5px;
+    cursor: pointer
+}
+
+footer .social li a
+{
+    font-size: 15px;
+}
+
+.navbar-default .navbar-collapse li:hover a
+{
+    color: #337ab7;
+    text-decoration: none;
+    -webkit-transition: all .2s linear;
+    -moz-transition: all .2s linear;
+    -o-transition: all .2s linear;
+    transition: all .2s linear;
+}
+footer .social li:hover i
+{
+    -webkit-transform: scale(1.3,1.3);
+    -moz-transform: scale(1.3,1.3);
+    -o-transform: scale(1.3,1.3);
+    transform: scale(1.3,1.3);
+    
+    -webkit-transition: all .3s linear;
+    -moz-transition: all .3s linear;
+    -o-transition: all .3s linear;
+    transition: all .3s linear;
+}
+
+footer p{
+    color: #fff;
+    font-size: 13px;
+}
+/*================
+End footer style
+==================*/
