--- a/css/media-query.css
+++ b/css/media-query.css
@@ -64,18 +64,18 @@
     /*================== 
     Start features style 
     ====================*/
-    .feature-title
+    .agency-title
     {
         text-align: center;
         width: 300px;
         margin: auto;
     }
     
-    .features h2{
+    .agency h2{
         font-size: 22px;
         top: 50px;
     }
-    .features .feature-title span
+    .agency .agency-title span
     {
         font-size: 150px;
     }
@@ -106,11 +106,7 @@
     /*================
     Start agency style
     ==================*/
-    .agency .img img
-    {
-        float: left;
-        margin-left: 40px;
-    }
+    
     /*================
     end agency style
     ==================*/
@@ -170,10 +166,7 @@
     /*================
     Start agency style
     ==================*/
-    .agency .content>div
-    {
-        margin-left: 5px;
-    }
+    
     /*================
     End agency style
     ==================*/
